# jsx-viewer

./: .gitignore  Dockerfile  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: check.yml  publish.yml
examples/: hello-world.jsx
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: DropZone.tsx  ErrorBoundary.tsx  ErrorDisplay.tsx  Preview.tsx  Sidebar.tsx
src/hooks/: useDarkMode.ts  useDragDrop.ts  useFileLoader.ts
src/lib/: component-loader.ts  module-registry.ts  transpiler.ts
src/modules/shadcn/: accordion.tsx  alert.tsx  avatar.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  progress.tsx  scroll-area.tsx  select.tsx  separator.tsx  slider.tsx  switch.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
src/styles/: globals.css
